Bug 142255 - Crash when trying to insert a shape
Summary: Crash when trying to insert a shape
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks: Crash
  Show dependency treegraph
 
Reported: 2021-05-13 09:17 UTC by NISZ LibreOffice Team
Modified: 2021-05-19 07:12 UTC (History)
6 users (show)

See Also:
Crash report or crash signature: https://crashreport.libreoffice.org/stats/crash_details/beba7671-5f49-480e-89d9-3775c4226774


Attachments
bt with debug symbols (gen rendering) (5.53 KB, text/plain)
2021-05-13 10:23 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-05-13 09:17:58 UTC
Writer nightly started to crash when trying to insert a shape from the toolbar.

Steps to reproduce:
    1. Open Writer
    2. Click on the Standard toolbars Basic shapes button, select a shape to insert or just close it

Actual results:
Crash

Expected results:
No crash

LibreOffice details:
Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: dbd4110cc36011042c98549d997daa79e8065aba
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL

Not yet in bibisect-7.2:
Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: e76292edc1d7e70ffa3f3940dc635581eb1a121b
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded
from 7 days ago.
Comment 1 Xisco Faulí 2021-05-13 09:35:29 UTC
I can't reproduce it in

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 54387d1d35cb79a30be208052831de74efd8b2f2
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 2 Julien Nabet 2021-05-13 10:23:48 UTC
Created attachment 171954 [details]
bt with debug symbols (gen rendering)

On pc Debian x86-64 with master sources updated today, I could reproduce this with gen rendering.
(I don't reproduce this with gtk3 rendering).
Comment 3 Xisco Faulí 2021-05-13 10:27:21 UTC
(In reply to Julien Nabet from comment #2)
> Created attachment 171954 [details]
> bt with debug symbols (gen rendering)
> 
> On pc Debian x86-64 with master sources updated today, I could reproduce
> this with gen rendering.
> (I don't reproduce this with gtk3 rendering).

Hi Julien,
Could you please share the info from Help - About LibreOffice ?
Comment 4 Julien Nabet 2021-05-13 10:56:00 UTC
Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: dbd4110cc36011042c98549d997daa79e8065aba
CPU threads: 12; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: fr-FR (fr_FR.UTF-8); UI: en-US
Calc: threaded
Comment 5 Julien Nabet 2021-05-13 10:56:57 UTC
Sorry, here's the info with gen rendering:
Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: dbd4110cc36011042c98549d997daa79e8065aba
CPU threads: 12; OS: Linux 5.10; UI render: default; VCL: x11
Locale: fr-FR (fr_FR.UTF-8); UI: en-US
Calc: threaded
Comment 6 Xisco Faulí 2021-05-13 13:36:17 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=5aa60be574ece81b27c8f63e6e809871c694dba0

author	Noel Grandin <noel.grandin@collabora.co.uk>	2021-05-12 11:33:06 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2021-05-12 13:37:18 +0200
commit 5aa60be574ece81b27c8f63e6e809871c694dba0 (patch)
tree c6e272e967983ddff1df54bd6c4b0e9591032344
parent db35b9086476259fa2c047f2e4dfe7862d026530 (diff)
fix leak in VCLXWindow

Bisected with: bibisect-linux64-7.2

Adding Cc: to Noel Grandin
Comment 7 Noel Grandin 2021-05-14 09:11:29 UTC Comment hidden (obsolete)
Comment 8 Xisco Faulí 2021-05-14 09:15:39 UTC
(In reply to Noel Grandin from comment #7)
> I cannot reproduce this as of
> 
> Version: 7.2.0.0.alpha0+ / LibreOffice Community
> Build ID: 9837d3b51557955b2a2b7e66c2bdcdc706474704
> CPU threads: 8; OS: Linux 5.8; UI render: default; VCL: x11
> Locale: en-ZA (en_ZA.UTF-8); UI: en-US
> Calc: threaded
> 
> Possibly it has been fixed already?

Click on the arrow to show the dropdown list and select any shape there ( e.g. circle )
Comment 9 Commit Notification 2021-05-14 16:35:46 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ec996f7fc26601a6b5bf2ea12890316905662e40

tdf#142255 Crash when trying to insert a shape

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Julien Nabet 2021-05-15 11:04:40 UTC
With master sources updated today, I don't reproduce this anymore, thank you Noel!

Just for the record, here are all the console logs I got just when doing the test and closing LO.
warn:i18nlangtag:24793:24793:i18nlangtag/source/languagetag/languagetag.cxx:1648: LanguageTag::getRegionFromLangtag: pRegionT==NULL for 'eo-EO'
warn:i18nlangtag:24793:24793:i18nlangtag/source/languagetag/languagetag.cxx:1648: LanguageTag::getRegionFromLangtag: pRegionT==NULL for 'eo-EO'
warn:legacy.tools:24793:24793:sfx2/source/control/bindings.cxx:1764: No cache for OfficeDispatch!
warn:vcl.gdi:24793:24793:vcl/unx/generic/gdi/salbmp.cxx:154: 32-bit images not supported, converting to 24-bit
warn:vcl.gdi:24793:24793:vcl/unx/generic/gdi/salbmp.cxx:154: 32-bit images not supported, converting to 24-bit
warn:vcl.gdi:24793:24793:vcl/unx/generic/gdi/salbmp.cxx:154: 32-bit images not supported, converting to 24-bit
warn:legacy.osl:24793:24793:sfx2/source/sidebar/DeckLayouter.cxx:483: OSL_ASSERT: nRemainingHeightToDistribute==0
warn:legacy.tools:24793:24793:sfx2/source/control/statcach.cxx:398: setting state of dirty message
warn:legacy.osl:24793:24793:sfx2/source/sidebar/DeckLayouter.cxx:483: OSL_ASSERT: nRemainingHeightToDistribute==0
warn:legacy.osl:24793:24793:sfx2/source/sidebar/DeckLayouter.cxx:483: OSL_ASSERT: nRemainingHeightToDistribute==0
warn:legacy.osl:24793:24793:sfx2/source/sidebar/DeckLayouter.cxx:483: OSL_ASSERT: nRemainingHeightToDistribute==0
warn:legacy.osl:24793:24793:sfx2/source/sidebar/DeckLayouter.cxx:483: OSL_ASSERT: nRemainingHeightToDistribute==0
warn:legacy.osl:24793:24793:sfx2/source/sidebar/DeckLayouter.cxx:483: OSL_ASSERT: nRemainingHeightToDistribute==0
warn:legacy.osl:24793:24793:sfx2/source/sidebar/DeckLayouter.cxx:483: OSL_ASSERT: nRemainingHeightToDistribute==0
warn:legacy.tools:24793:24793:sfx2/source/control/statcach.cxx:398: setting state of dirty message
warn:legacy.osl:24793:24793:sfx2/source/sidebar/DeckLayouter.cxx:483: OSL_ASSERT: nRemainingHeightToDistribute==0
warn:legacy.osl:24793:24793:sfx2/source/sidebar/DeckLayouter.cxx:483: OSL_ASSERT: nRemainingHeightToDistribute==0
warn:legacy.osl:24793:24793:sfx2/source/sidebar/DeckLayouter.cxx:483: OSL_ASSERT: nRemainingHeightToDistribute==0
warn:legacy.osl:24793:24793:sfx2/source/sidebar/DeckLayouter.cxx:483: OSL_ASSERT: nRemainingHeightToDistribute==0
warn:legacy.osl:24793:24793:sfx2/source/sidebar/DeckLayouter.cxx:483: OSL_ASSERT: nRemainingHeightToDistribute==0
warn:legacy.osl:24793:24793:sfx2/source/sidebar/DeckLayouter.cxx:483: OSL_ASSERT: nRemainingHeightToDistribute==0
warn:legacy.osl:24793:24793:sfx2/source/doc/sfxbasemodel.cxx:2938: SfxBaseModel::IsInitialized: this should have been caught earlier!
warn:xmloff.core:24793:24793:xmloff/source/core/xmlimp.cxx:928: DBG_UNHANDLED_EXCEPTION in setTargetDocument exception: com.sun.star.lang.NotInitializedException message: /home/julien/lo/libreoffice/sfx2/source/doc/sfxbasemodel.cxx:2950
warn:xmloff:24793:24793:xmloff/source/draw/ximpstyl.cxx:884: unknown element urn:oasis:names:tc:opendocument:xmlns:drawing:1.0 draw:marker
warn:xmloff:24793:24793:xmloff/source/draw/ximpstyl.cxx:884: unknown element urn:oasis:names:tc:opendocument:xmlns:style:1.0 style:default-style
warn:svl.items:24793:24793:svl/source/items/itempool.cxx:355: old secondary pool: EditEngineItemPool of pool: XOutdevItemPool must be empty.
warn:legacy.osl:24793:24793:svx/source/svdraw/svdmrkv1.cxx:311: SdrMarkView::UndirtyMrkPnt(): Selected points on an object that is not a PolyObj!
warn:legacy.tools:24793:24793:sfx2/source/control/statcach.cxx:398: setting state of dirty message
warn:vcl.schedule.deinit:24793:24793:vcl/source/app/scheduler.cxx:177: DeInit task: Timer a: 1 p: 1 graphic::Manager maSwapOutTimer 10000ms (0x7f85e9f283a0)
warn:vcl.schedule.deinit:24793:24793:vcl/source/app/scheduler.cxx:198: DeInit active tasks: 1 (ignored: 0)