tdf#142255 Crash when trying to insert a shape

regression from
    commit 5aa60be574ece81b27c8f63e6e809871c694dba0
    fix leak in VCLXWindow
it's too dangerous to dump the Impl during dispose(), because if I do,
the Impl is removed while we are iterating over listeners.

So just be check mbIsDisposing more heavily to prevent new references to
the VCLXWindow being added after it is disposed.

Change-Id: Ibb00a289440d24f531072ef5809613d5e8a0a98f