include/toolkit/awt/vclxwindow.hxx
@@ -133,6 +133,8 @@ public:
 
     void    notifyWindowRemoved( vcl::Window const & _rWindow );
 
+    bool IsDisposed();
+
     // css::lang::XUnoTunnel
     UNO3_GETIMPLEMENTATION_DECL(VCLXWindow)
 
